builder/tests/snapshots/snapshot@03-call-setters.expanded.rs.snap
---
source: builder/tests/01-snapshots.rs
description: "Source file: 03-call-setters.expanded.rs"
---
use derive_builder::Builder;
pub struct Command {
    executable: String,
    args: Vec<String>,
    env: Vec<String>,
    current_dir: String,
}
fn main() {
    let mut builder = Command::builder();
    builder.executable("cargo".to_owned());
    builder
        .args(
            <[_]>::into_vec(
                ::alloc::boxed::box_new(["build".to_owned(), "--release".to_owned()]),
            ),
        );
    builder.env(::alloc::vec::Vec::new());
    builder.current_dir("..".to_owned());
}
