builder/tests/snapshots/snapshot@09-redefined-prelude-types.expanded.rs.snap
---
source: builder/tests/01-snapshots.rs
description: "Source file: 09-redefined-prelude-types.expanded.rs"
---
use derive_builder::Builder;
type Option = ();
type Some = ();
type None = ();
type Result = ();
type Box = ();
pub struct Command {
    executable: String,
}
fn main() {}
